// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`athena pa query measure: preaggregation 1`] = `
Array [
  Object {
    "OrdersPA.totalAmount": "1700",
  },
]
`;

exports[`athena query measure: query 1`] = `
Array [
  Object {
    "Orders.totalAmount": "1700",
  },
]
`;
